# edu-summarizer-ai

./: README.md  pyproject.toml
src/: __init__.py  edusummarizeai.db
src/core/: __init__.py  interactive_learning.py  pdf_extractor.py  summarizer.py  worksheet_generator.py
src/db/: __init__.py  database.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  main.py
