[project]
name = "edu-summarizer-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "vansh-561",email = "vanshagrawal561@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pdfplumber (>=0.11.6,<0.12.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "reportlab (>=4.4.0,<5.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "google-generativeai (==0.8.5)",
    "langchain-google-genai (==2.0.5)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.58,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "edu_summarizer_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
